<resources>
    <string name="app_name">remote</string>
    <string name="Assembly">Сборка</string>
    <string name="Shipment">Отгрузка</string>
    <string name="Income">Приемка</string>
    <string name="Move">Перемещение</string>
    <string name="Search">Поиск</string>
    <string name="Inventory">Инвентаризация</string>
    <string name="Add">Добавить</string>
    <string name="Bork">Борк</string>
    <string name="Atomy">Атоми</string>
    <string name="FeedConsalt">ФидКонсалт</string>
    <string name="save">Сохранить</string>
    <string name="Log">Log</string>
    <string name="ToFinish">Завершить</string>
</resources>